dfir_rs/tests/compile-fail-stable/surface_partition_badclosure.rs
../compile-fail/surface_partition_badclosure.rs